--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
+#server.servlet.context-path=/services
+logging.level.root=DEBUG
+#logging.level.web=DEBUG
+#server.servlet.context-parameters.export-path=/export
+#server.servlet.context-parameters.import-path=/import
+#server.servlet.context-parameters.monitor-cycle-time=30
+#server.servlet.context-parameters.file-storage-time=10
+#server.servlet.context-parameters.numFmt-lang=ko
+#spring.servlet.multipart.enabled=true
