--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,5 @@ build/
 
 ### Project ###
 logs/
-src/main/webapp/upload
-src/main/webapp/export
-src/main/webapp/import
-
-
+src/main/resources/static/**
 
