--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,13 @@
 	<description>Nexacro demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<repositories>
 	  <repository>
 	    <id>tobesoft-overseas</id>
-	    <url>http://jct.tobesoft.co.jp/overseas/maven/repository</url>
+	    <url>http://os.tobesoft.com/maven/repository</url>
 	  </repository>
 	</repositories>
 	
@@ -60,63 +60,62 @@
 <!-- 		    <scope>provided</scope> -->
 <!-- 		</dependency> -->
 
-		<!-- dependency for nexacro and nexacro xeni api -->
+		<!-- dependency for nexacro xapi and nexacro xeni -->
 		<dependency>
-		    <groupId>commons-logging</groupId>
-		    <artifactId>commons-logging</artifactId>
-		    <version>1.1.1</version>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
 		</dependency>
-
-		<!-- cos.jar for multipart, poi for excel, nexacro-xapi and nexacro-xeni from tobesoft overseas repo -->
-<!--		<dependency>-->
-<!--			  <groupId>com.servlets</groupId>-->
-<!--			  <artifactId>cos</artifactId>-->
-<!--			  <version>1.5.0_16</version>-->
-<!--		 </dependency>-->
-
+				
 		<dependency>
-			<groupId>com.tobesoft.nexacro17</groupId>
+			<groupId>com.nexacro17</groupId>
 			<artifactId>nexacroxapi</artifactId>
-			<version>2019.11.11</version>
+			<version>1.1.1</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.tobesoft.nexacro17</groupId>
+			<groupId>com.nexacro17</groupId>
 			<artifactId>nexacroxeni</artifactId>
-			<version>2020.03.18</version>
+			<version>2.2.0</version>
 		</dependency>
+
 		<!-- poi -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>poi-3.10-FINAL-20140208</version>
+			<version>4.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>poi-3.10-FINAL-20140208</version>
+			<version>4.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml-schemas</artifactId>
-			<version>poi-3.10-FINAL-20140208</version>
+			<version>4.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>poi-3.10-FINAL-20140208</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-scrachapd</artifactId>
-			<version>poi-3.10-FINAL-20140208</version>
+			<artifactId>poi-scratchpad</artifactId>
+			<version>4.1.2</version>
 		</dependency>
 
 		<!-- dependency for nexacro xeni -->
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.5</version>
+			<version>1.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.19</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
@@ -129,6 +128,11 @@
 			<version>2.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
+		</dependency>
+		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
@@ -136,17 +140,17 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.13</version>
+			<version>1.2.17</version>
 		</dependency>
 		<dependency>
-			<groupId>stax</groupId>
-			<artifactId>stax-api</artifactId>
-			<version>1.0.1</version>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>SparseBitSet</artifactId>
+			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.xmlbeans</groupId>
 			<artifactId>xmlbeans</artifactId>
-			<version>2.3.0</version>
+			<version>3.1.0</version>
 		</dependency>
 
 	</dependencies>
