--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
+		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.tobesoft.overseas.nexacro17</groupId>
 	<artifactId>demo</artifactId>
@@ -19,12 +20,12 @@
 	</properties>
 
 	<repositories>
-	  <repository>
-	    <id>tobesoft-overseas</id>
-	    <url>http://os.tobesoft.com/maven/repository</url>
-	  </repository>
+		<repository>
+			<id>tobesoft-overseas</id>
+			<url>https://os.tobesoft.com/maven/repository</url>
+		</repository>
 	</repositories>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,58 +44,54 @@
 			</exclusions>
 		</dependency>
 
-	    <dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-devtools</artifactId>
-	        <optional>true</optional>
-	    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-log4j2</artifactId>-->
-<!--		</dependency>-->
+		<!-- 		<dependency> -->
+		<!-- 		    <groupId>org.apache.tomcat.embed</groupId> -->
+		<!-- 		    <artifactId>tomcat-embed-jasper</artifactId> -->
+		<!-- 		    <scope>provided</scope> -->
+		<!-- 		</dependency> -->
 
-<!-- 		<dependency> -->
-<!-- 		    <groupId>org.apache.tomcat.embed</groupId> -->
-<!-- 		    <artifactId>tomcat-embed-jasper</artifactId> -->
-<!-- 		    <scope>provided</scope> -->
-<!-- 		</dependency> -->
-
-		<!-- dependency for nexacro xapi and nexacro xeni -->
+		<!-- nexacro xapi dependency -->
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.2</version>
+			<version>1.1.1</version>
 		</dependency>
-				
 		<dependency>
 			<groupId>com.nexacro17</groupId>
 			<artifactId>nexacroxapi</artifactId>
 			<version>1.1.1</version>
 		</dependency>
 
+		<!-- nexacro xeni dependency -->
 		<dependency>
 			<groupId>com.nexacro17</groupId>
 			<artifactId>nexacroxeni</artifactId>
 			<version>2.2.0</version>
 		</dependency>
-
 		<!-- poi -->
-		<dependency>
+		<!-- omitted it's poi-ooxml-->
+		<!-- <dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>4.1.2</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.2</version>
 		</dependency>
-		<dependency>
+		<!-- omitted it's poi-ooxml-->
+		<!-- <dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>4.1.2</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-scratchpad</artifactId>
@@ -102,6 +99,12 @@
 		</dependency>
 
 		<!-- dependency for nexacro xeni -->
+		<!-- omitted it's poi dependency-->
+		<!-- <dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>		
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
@@ -116,26 +119,16 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>1.19</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.3</version>
-		</dependency>
+		</dependency>		
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.2</version>
-		</dependency>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>dom4j</groupId>
-			<artifactId>dom4j</artifactId>
-			<version>1.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -151,8 +144,20 @@
 			<groupId>org.apache.xmlbeans</groupId>
 			<artifactId>xmlbeans</artifactId>
 			<version>3.1.0</version>
-		</dependency>
+		</dependency> -->
 
+		<!-- commons-fileupload original version 1.3.1 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<!-- dom4j original version 1.6.1 -->
+		<dependency>
+			<groupId>org.dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>2.1.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
